k8s/overlays/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  namespace: capstone
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: api-users
                port:
                  number: 3001
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: api-orders
                port:
                  number: 3002
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: api-products
                port:
                  number: 3003
